--- a/gentleSelect/jquery-gentleSelect.css
+++ b/gentleSelect/jquery-gentleSelect.css
@@ -1,26 +1,32 @@
-.gentleselect-data { display: none; }
+.gentleselect-data {
+    display: none;
+}
 
 .gentleselect-label {
-    padding: 1px 20px 1px 20px;
-    background-color: #eee;
-    
-    border: 2px solid #ddd;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    border-radius: 5px;   
+    /* padding: 1px 20px 1px 20px;
+     background-color: #eee;
 
-    background-repeat: no-repeat; 
-    background-position: center right; 
-    
-    cursor: pointer;
-    color: #555;
-    
-    white-space: nowrap;
+     border: 2px solid #ddd;
+     -moz-border-radius: 5px;
+     -webkit-border-radius: 5px;
+     border-radius: 5px;
+
+     background-repeat: no-repeat;
+     background-position: center right;
+
+     cursor: pointer;
+     color: #555;*/
+    min-width: 110px;
+}
+
+.gentleselect-label .caret {
+    float: right;
+    margin-top: 8px;
 }
 
 .gentleselect-label-highlight {
-    border: 2px solid #aaa;
-    background-image: url('img/expand.png');
+    /*border: 2px solid #aaa;
+    background-image: url('img/expand.png');*/
 }
 
 .gentleselect-dialog {
@@ -29,48 +35,45 @@
     display: none;
 
     background-color: #fff;
-    border: 2px solid #999;
+    border: 1px solid #999;
 
     -moz-box-shadow: 0px 0px 12px #555;
     -webkit-box-shadow: 0px 0px 12px #555;
     box-shadow: 0px 0px 12px #555;
 
-    margin: 0; padding: 0;
+    margin: 0;
+    padding: 0;
+    border-radius: 4px;
 }
 
-.gentleselect-dialog > ul { padding: 0; margin: 0; list-style: none; }
+.gentleselect-dialog > ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
 .gentleselect-dialog > ul > li {
     margin: 0;
     padding: 3px 20px 3px 25px;
+    margin-top: 2px;
     cursor: pointer;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-.gentleselect-dialog > ul > li.selected {
-    font-weight: bold;
-    color: #369;
-    background-color: #eee;
+    border-radius: 4px;
 }
 
-.gentleselect-dialog > ul > li.gentleselect-dummy:hover { background-color: #fff; }
+.gentleselect-dialog > ul > li.selected {
+    /*font-weight: bold;*/
+    color: #FFFFFF;
+    background-color: #3198E0;
+}
+
+.gentleselect-dialog > ul > li.gentleselect-dummy:hover {
+    background-color: #fff;
+}
+
 .gentleselect-dialog > ul > li:hover {
     background-color: #69c;
     color: #fff;
 }
-
-/* override CSS for lone selected item when disallowEmpty=true */
-.gentleselect-dialog > ul > li.sole-selected {
-    cursor: default;
-}
-.gentleselect-dialog > ul > li.sole-selected:hover {
-    color: #369;
-    background-color: #eee;
-}
-
 
 .gentleselect-dialog > .gentleselect-title {
     display: block;
@@ -81,4 +84,5 @@
     font-size: 0.8em;
     color: #666;
     overflow: hidden;
+    border-radius: 4px 4px 0 0;
 }
